add a few new 1.4 codes; improve logging of missing codes

--- a/src/com/bencvt/minecraft/mcpacketsniffer/default-options.properties
+++ b/src/com/bencvt/minecraft/mcpacketsniffer/default-options.properties
@@ -39,6 +39,11 @@ summarize-binary-data=true
 # with this one.
 color-escape=&
 
+# If true, log a stack trace to McPacketSniffer.log every time a new coded
+# value is encountered that isn't listed in the built-in tables. This normally
+# shouldn't happen.
+log-missing-codes=true
+
 # If true, the stats dump file will include every valid packet id.
 # If false, only packets that were actually encountered during the
 # session will be output.
