documentation; fix a couple minor bugs

--- a/src/com/bencvt/minecraft/mcpacketsniffer/default-options.properties
+++ b/src/com/bencvt/minecraft/mcpacketsniffer/default-options.properties
@@ -1,10 +1,11 @@
 # Options file for McPacketSniffer
-# This file is automatically reloaded if it changes (i.e. you can adjust
-# the whitelist on the fly.)
+# https://github.com/bencvt/McPacketSniffer
+# This file is automatically reloaded if it changes (i.e., you can adjust the
+# whitelist on the fly.) To restore defaults, delete or rename this file.
 
 # If true create new, uniquely named files for the packet log and
 # stats dump each time a new server connection is established.
-# If false, use to the same files (append).
+# If false, reuse the same files (append).
 new-file-per-connection=true
 
 # If true, include internal connections to the integrated server.
@@ -26,9 +27,13 @@ flush-after-every-packet=false
 flush-interval=10000
 
 # If true, include chunk X/Z when logging coordinates.
+# This can make searching for events by area easier.
+# A chunk is 16x16 blocks.
 coords-include-region=true
 
 # If true, include the region X/Z when logging coordinates.
+# This can make searching for events by area easier.
+# A region is 32x32 chunks == 512x512 blocks.
 coords-include-chunk=true
 
 # If true, log only the size of large byte arrays (e.g. chunk data).
