add stubs for new-file-per-server and stats-dump options

--- a/src/com/bencvt/minecraft/mcpacketsniffer/default-options.properties
+++ b/src/com/bencvt/minecraft/mcpacketsniffer/default-options.properties
@@ -8,6 +8,11 @@
 # If false, reuse the same files (append).
 new-file-per-connection=true
 
+# If true, create separate log file for each server.
+# If false, log everything to a single file.
+# Ignored if new-file-per-connection is true.
+new-file-per-server=true
+
 # If true, include internal connections to the integrated server.
 # If false, only log packets when connected to a remote server (or to
 # a standalone server running in a separate process on localhost).
@@ -49,7 +54,11 @@ color-escape=&
 # shouldn't happen.
 log-missing-codes=true
 
+# If true, periodically create a txt file summarizing packets for this session.
+stats-dump=true
+
 # If true, the stats dump file will include every valid packet id.
 # If false, only packets that were actually encountered during the
 # session will be output.
+# Ignored if stats-dump is false.
 stats-all-packets=false
