refactor options for clarity

--- a/src/com/bencvt/minecraft/mcpacketsniffer/default-options.properties
+++ b/src/com/bencvt/minecraft/mcpacketsniffer/default-options.properties
@@ -1,22 +1,15 @@
 # Options file for McPacketSniffer
 # https://github.com/bencvt/McPacketSniffer
+# 
 # This file is automatically reloaded if it changes (i.e., you can adjust the
-# whitelist on the fly.) To restore defaults, delete or rename this file.
-
-# If true create new, uniquely named files for the packet log and
-# stats dump each time a new server connection is established.
-# If false, reuse the same files (append).
-new-file-per-connection=true
-
-# If true, create separate log file for each server.
-# If false, log everything to a single file.
-# Ignored if new-file-per-connection is true.
-new-file-per-server=true
-
-# If true, include internal connections to the integrated server.
-# If false, only log packets when connected to a remote server (or to
-# a standalone server running in a separate process on localhost).
-integrated-server=true
+# whitelist on the fly.) Some settings will not take effect until you reconnect
+# to a server.
+# 
+# To restore defaults, delete or rename this file.
+# 
+# If any edited settings are syntactically invalid, this file will be renamed
+# to "options_#_invalid.txt" and the error logged to McPacketLogger.log.
+# -----------------------------------------------------------------------------
 
 # If non-empty, filter out unlisted packets ids.
 # For ids, refer to http://mc.kev009.com/Protocol
@@ -53,6 +46,26 @@ color-escape=&
 # value is encountered that isn't listed in the built-in tables. This normally
 # shouldn't happen.
 log-missing-codes=true
+
+# -----------------------------------------------------------------------------
+# Modified settings above this line will take effect immediately. Settings
+# below this line will not take effect until you reconnect to a server.
+# -----------------------------------------------------------------------------
+
+# If true create new, uniquely named files for the packet log and
+# stats dump each time a new server connection is established.
+# If false, reuse the same files (append).
+new-file-per-connection=false
+
+# If true, create separate files for each server.
+# If false, log everything to a single file.
+# Ignored if new-file-per-connection is true.
+new-file-per-server=true
+
+# If true, include internal connections to the integrated server.
+# If false, only log packets when connected to a remote server (or to
+# a standalone server running in a separate process on localhost).
+integrated-server=true
 
 # If true, periodically create a txt file summarizing packets for this session.
 stats-dump=true
